[package]
name = "gpm"
version = "0.1.16"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
readme = "README.md"
keywords = ["gpm", "git", "project", "manager"]
repository = "https://github.com/axetroy/gpm.rs"
description = """
A command line tool, manage your hundreds of repository, written with Rust.
"""

edition = "2021"

[[bin]]
name = "gpm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.2"
git-url-parse = "0.4.4"
ctrlc = { version = "3.4.1", features = ["termination"] }
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
inquire = "0.6.2"
eyre = "0.6.8"
path-absolutize = "3.1.1"
which = "4.4.2"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"